--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,7 @@
   min-height: 100vh;
   background-image: url("http://mdbootstrap.com/img/Photos/Others/images/91.jpg");
   background-repeat: no-repeat;
-
-  background-position: center center;
+  background-color: rgb(155, 154, 154);
 }
 
 .App-logo {
