--- a/src/App.css
+++ b/src/App.css
@@ -156,7 +156,7 @@ margin: 0 0 1.25rem;
   width: 28%;
   margin: auto;
   font-size: 14px;
-  color: darkblue;
+  color: #61dafb;
   background-color: #21252b;
   text-align: center;
   border-width: 1px;
